# nped

./: .gitignore  CMakeLists.txt  Config.md  FP  LOG  Makefile  PROMPT  README.md  TASK  TODO.md  a.out  agents-build.md  agents-plan.md  build_windows.sh  config.cpp  editor.cpp  editor.h  gitlog  manual.md  mops.md  mxe  qmlls.json  qtquickcontrols2.conf  test_json.cpp  test_regex.cpp
build-mxe/: CMakeCache.txt
build-windows/: CMakeCache.txt
build_mxe/: CMakeCache.txt
manual/: build.md  examples.md  manual-de-1.md  manual-de.md  manual.md  overview.md  status.md  tools.md
qml/: AiConfig.qml  ColorConfigItem.qml  ConfigDialog.qml  FiletypeConfig.qml  GuiPanel.qml  InputRow.qml  LsConfig.qml  SettingsCategory.qml  ShortcutConfig.qml  TextStyleConfig.qml
res/: config.json  diff.html  diff2html.min.css
res/js/: app.bundle.js
src/: DIFF  LOG  agent.cpp  agent.h  agentui.cpp  anthropic.cpp  anthropic.h  ast.cpp  ast.h  attachmentbutton.h  chatdisplay.cpp  chatdisplay.h  commands.h  completer.cpp  completer.h  completion.cpp  completion.h  config.cpp  configdialog.cpp  configdialog.h  configwebview.cpp  configwebview.h  dark.qss  dashboard.cpp  dashboard.h  editor.cpp  editor.h  editwin.cpp  editwin.h  enter.cpp  enter.h  file.cpp  file.h  filetype.cpp  filetype.h  filewatcher.cpp  filewatcher.h  gemini.cpp  gemini.h  git.cpp  (+47 more)
